# sd-poc

./: .gitignore  deletecluster.sh  deletepods.sh  makecluster.sh
Auth/: Dockerfile  build.sh  deployment.yaml  service.yaml  test.sh
Capability/: Dockerfile  Shipfile  build.sh  capability.cabal  cleanup.sh  deployment.yaml  service.yaml  ship.sh
Capability/app/: Main.hs
Capability/src/: Capability.hs
Capability/src/Service/: Discovery.hs  Registry.hs
Environment/: RebuildClean  Shipfile  build.sh  deployment.yaml  environment.cabal  rebuild.sh  service.yaml  ship.sh
Environment/app/: Main.hs
Environment/src/: Environment.hs
Environment/src/Service/: Registry.hs  Types.hs
Permissions/: Rebuildfile  Shipfile  build.sh  deployment.yaml  permissions.cabal  rebuild.sh  service.yaml  ship.sh
Permissions/app/: Main.hs
Permissions/src/: Permissions.hs
Permissions/src/Service/: Registry.hs
Permissions/src/Utils/: Bytes.hs  Elmify.hs
SD/: Dockerfile  build.sh  deployment.yaml
ServiceDiscovery/: Dockerfile  Dockerfile2  app.py  build_and_ship.sh  deployment.yaml  kubecreate.sh  kubedelete.sh  service.yaml
