name:          capability
version:       0.0.1
cabal-version: >= 1.8
build-type:    Simple

library
  hs-source-dirs:   ./src
  exposed-modules:  Utils.Elmify
                  , Utils.Bytes
                  , Service.Discovery
                  , Service.Registry
                  , Service.Types
                  , Capability
                  , Permissions
  build-depends:    base >= 4.7 && < 5
                  , bytestring
                  , aeson
                  , text
                  , HTTP
                  , bytestring
                  , hostname
                  , mtl

executable          capability
  hs-source-dirs:   ./app
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  extensions:       OverloadedStrings
  build-depends:    base   >= 4      && < 5
                  , capability
                  , scotty
                  , wai-extra
                  , text
                  , hostname
